k8s-manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ci-exporter
  labels:
    app: gitlab-ci-exporter
spec:
  selector:
    app: gitlab-ci-exporter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-ci-exporter
  labels:
    app: gitlab-ci-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-ci-exporter
  template:
    metadata:
      labels:
        app: gitlab-ci-exporter
      annotations:
        prometheus.io/port: '8080'
        prometheus.io/scrape: 'true'
    spec:
      containers:
        - name: gitlab-ci-exporter
          image: {DOCKER REGISTRY}/gitlab-ci-exporter:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: "30m"
              memory: 100Mi
            requests:
              cpu: "30m"
              memory: 100Mi
          volumeMounts:
            - name: config
              mountPath: "/opt/app"
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        role: infra
      volumes:
        - name: config
          configMap:
            name: gitlab-ci-exporter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ci-exporter
  labels:
    app: gitlab-ci-exporter
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  rules:
    - host: gitlab-ci-exporter.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-ci-exporter
                port:
                  number: 80
